Project

General

Profile

Actions

Bug #58794

open

GetObj crashes when reading an object without a manifest

Added by Casey Bodley about 1 year ago. Updated 11 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if we read an object that doesn't have a manifest attribute, RGWRados::get_obj_state_impl() adds an empty one and causes GetObj to throw an end_of_buffer exception on decode


Related issues 3 (1 open2 closed)

Copied to rgw - Backport #58897: quincy: GetObj crashes when reading an object without a manifestIn ProgressCasey BodleyActions
Copied to rgw - Backport #61373: reef: GetObj crashes when reading an object without a manifestResolvedCasey BodleyActions
Copied to rgw - Backport #61374: pacific: GetObj crashes when reading an object without a manifestRejectedCasey BodleyActions
Actions #1

Updated by Casey Bodley about 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 50172
Actions #2

Updated by Yuval Lifshitz about 1 year ago

could this be related to this issue: https://tracker.ceph.com/issues/58748 ?
(the other issue is happening on incrementing the iterator in "encode")

Actions #3

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from pacific quincy to pacific quincy reef
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #58897: quincy: GetObj crashes when reading an object without a manifest added
Actions #5

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions #6

Updated by Casey Bodley 11 months ago

  • Tags deleted (backport_processed)
Actions #7

Updated by Backport Bot 11 months ago

  • Copied to Backport #61373: reef: GetObj crashes when reading an object without a manifest added
Actions #8

Updated by Backport Bot 11 months ago

  • Copied to Backport #61374: pacific: GetObj crashes when reading an object without a manifest added
Actions #9

Updated by Backport Bot 11 months ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF